moved some divs

--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
     <title>Tristen Angell</title>
 </head>
 <body>
-    <div class="container-fluid bg-1 text-center default">
-        <img src="img/profile.jpg" class="rounded-circle" alt="Profile Pic" style="width:30%; height:auto">
-        <h3 class=>Tristen Drake Angell</h3>
+    <div class="container-fluid text-center default">
+        <div class="container-fluid text-center col-sm-6">
+            <img src="img/profile.jpg" class="rounded-circle img-fluid" alt="Profile Pic" >
+        </div>
+        <h1 class=>Tristen Drake Angell</h1>
     </div>
-    <div class="container-fluid main text-center">
-        <h3>Title One</h3>
-        <p>
-            Reprehenderit tempor consequat labore non fugiat duis commodo do aliquip id. Ullamco quis aute do aliqua mollit anim mollit qui. Culpa ut fugiat nostrud labore minim aliqua pariatur nostrud ullamco culpa tempor adipisicing sint dolore.
-        </p>
+    <div class="row">
+        <div class="container-fluid main text-center col-sm-6">
+            <h3>Title One</h3>
+            <p>
+                Reprehenderit tempor consequat labore non fugiat duis commodo do aliquip id. Ullamco quis aute do aliqua mollit anim mollit qui. Culpa ut fugiat nostrud labore minim aliqua pariatur nostrud ullamco culpa tempor adipisicing sint dolore.
+            </p>
+        </div>
+        <div class="container-fluid main text-center col-sm-6">
+            <h3>Title Two</h3>
+            <p>
+                Mollit adipisicing consequat voluptate in nostrud excepteur labore incididunt amet tempor nulla proident deserunt. Eiusmod officia ex aliqua magna sunt veniam nulla non elit veniam. Et commodo non ipsum amet commodo id occaecat id tempor tempor tempor. Elit tempor do ullamco elit dolore laboris veniam. Voluptate enim labore voluptate amet non voluptate dolor ipsum Lorem in commodo amet. In qui adipisicing ea id incididunt in enim.
+            </p>
+        </div>
     </div>
-    <div class="container-fluid main text-center">
-        <h3>Title Two</h3>
-        <p>
-            Mollit adipisicing consequat voluptate in nostrud excepteur labore incididunt amet tempor nulla proident deserunt. Eiusmod officia ex aliqua magna sunt veniam nulla non elit veniam. Et commodo non ipsum amet commodo id occaecat id tempor tempor tempor. Elit tempor do ullamco elit dolore laboris veniam. Voluptate enim labore voluptate amet non voluptate dolor ipsum Lorem in commodo amet. In qui adipisicing ea id incididunt in enim.
-        </p>
-    </div>
-
     
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
