--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </div>
     <div class="row">
         <div class="container-fluid main text-center col-sm-6">
-            <h3>Title One</h3>
+            <h3>About Me</h3>
             <p>
-                Reprehenderit tempor consequat labore non fugiat duis commodo do aliquip id. Ullamco quis aute do aliqua mollit anim mollit qui. Culpa ut fugiat nostrud labore minim aliqua pariatur nostrud ullamco culpa tempor adipisicing sint dolore.
+            I am a conscientious individual who likes to create and listen to music, as well as work with technology. My academic goal at Jackson Preparatory & Early College is to graduate high school with enough college credit to have a head start at university. My career goal is to pursue a leadership role in the field of technology.
             </p>
         </div>
         <div class="container-fluid main text-center col-sm-6">
-            <h3>Title Two</h3>
+            <h3>Goals</h3>
             <p>
-                Mollit adipisicing consequat voluptate in nostrud excepteur labore incididunt amet tempor nulla proident deserunt. Eiusmod officia ex aliqua magna sunt veniam nulla non elit veniam. Et commodo non ipsum amet commodo id occaecat id tempor tempor tempor. Elit tempor do ullamco elit dolore laboris veniam. Voluptate enim labore voluptate amet non voluptate dolor ipsum Lorem in commodo amet. In qui adipisicing ea id incididunt in enim.
+            Mollit adipisicing consequat voluptate in nostrud excepteur labore incididunt amet tempor nulla proident deserunt. Eiusmod officia ex aliqua magna sunt veniam nulla non elit veniam. Et commodo non ipsum amet commodo id occaecat id tempor tempor tempor. Elit tempor do ullamco elit dolore laboris veniam. Voluptate enim labore voluptate amet non voluptate dolor ipsum Lorem in commodo amet. In qui adipisicing ea id incididunt in enim.
             </p>
         </div>
     </div>
