--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
+    <!--My CSS-->
     <link rel="stylesheet" href="css/stylesheet.css">
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
     <title>Tristen Angell</title>
 </head>
 <body>
-    <div class="container-fluid text-center default">
+    <div class="container-fluid text-center default" style="box-shadow: 0 2px 10px black;">
         <div class="container-fluid text-center col-sm-4">
-            <img src="img/profile.jpg" class="rounded-circle img-fluid" alt="Profile Pic" >
+            <img src="img/profile.jpg" class="rounded-circle img-fluid" style="box-shadow: 0 0 5px black;" alt="Profile Pic" >
         </div>
-        <h1 class=>Tristen Drake Angell</h1>
+
+        <h1 class="movetext" style='text-shadow: 0 0 10px black;'>Tristen Drake Angell</h1>
     </div>
     <div class="row">
         <div class="container-fluid main text-center col-sm-6">
