Added placeholder image, updated styles

--- a/index.html
+++ b/index.html
@@ -13,25 +13,22 @@
     <title>Tristen Angell</title>
 </head>
 <body>
-    <div class="container-fluid text-center default" style="box-shadow: 0 2px 10px black;">
-        <div class="container-fluid text-center col-sm-4">
+    <div class="container-fluid padded text-center default" >
+        <div class="container-fluid padded text-center col-sm-4">
             <img src="img/profile.jpg" class="rounded-circle img-fluid" style="box-shadow: 0 0 5px black;" alt="Profile Pic" >
         </div>
 
         <h1 class="movetext" style='text-shadow: 0 0 10px black;'>Tristen Drake Angell</h1>
     </div>
     <div class="row">
-        <div class="container-fluid main text-center col-sm-6">
-            <h3>About Me</h3>
+        <div class="container-fluid padded main text-center col-sm-8">
+            <h3 class="primary-text">About Me</h3>
             <p>
             I am a conscientious individual who likes to create and listen to music, as well as work with technology. My academic goal at Jackson Preparatory & Early College is to graduate high school with enough college credit to have a head start at university. My career goal is to pursue a leadership role in the field of technology.
             </p>
         </div>
-        <div class="container-fluid main text-center col-sm-6">
-            <h3>Goals</h3>
-            <p>
-            Mollit adipisicing consequat voluptate in nostrud excepteur labore incididunt amet tempor nulla proident deserunt. Eiusmod officia ex aliqua magna sunt veniam nulla non elit veniam. Et commodo non ipsum amet commodo id occaecat id tempor tempor tempor. Elit tempor do ullamco elit dolore laboris veniam. Voluptate enim labore voluptate amet non voluptate dolor ipsum Lorem in commodo amet. In qui adipisicing ea id incididunt in enim.
-            </p>
+        <div class="container-fluid main text-center col-sm-4">
+            <a href="https://unsplash.com/@jacc?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" ><img src="img/turntable.jpg" class="img-fluid" alt="Turntable"></a>
         </div>
     </div>
     
