revamped design, added dat sexy parallax

--- a/index.html
+++ b/index.html
@@ -1,40 +1,71 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
-    <!--My CSS-->
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
-    <title>Tristen Angell</title>
-</head>
-<body>
-    <div class="container-fluid padded text-center default" >
-        <div class="container-fluid padded text-center col-sm-4">
-            <img src="img/profile.jpg" class="rounded-circle img-fluid" style="box-shadow: 0 0 5px black;" alt="Profile Pic" >
-        </div>
 
-        <h1 class="movetext" style='text-shadow: 0 0 10px black;'>Tristen Drake Angell</h1>
+<head>
+  <title>Tristen Angell</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <!--Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+</head>
+
+<body>
+  <div class="bgimg-1">
+    <div class="caption">
+      <span class="border">TRISTEN DRAKE ANGELL</span>
     </div>
-    <div class="row">
-        <div class="container-fluid padded main text-center col-sm-8">
-            <h3 class="primary-text">About Me</h3>
-            <p>
-            I am a conscientious individual who likes to create and listen to music, as well as work with technology. My academic goal at Jackson Preparatory & Early College is to graduate high school with enough college credit to have a head start at university. My career goal is to pursue a leadership role in the field of technology.
-            </p>
-        </div>
-        <div class="container-fluid main text-center col-sm-4">
-            <a href="https://unsplash.com/@jacc?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" ><img src="img/turntable.jpg" class="img-fluid" alt="Turntable"></a>
+  </div>
+  
+  <div class="row">
+    <div class="container-fluid padded main text-center col-sm-9">
+        <div class="align-middle">
+          <h3 class="primary-text">About Me</h3>
+          <p>
+          My name is Tristen Angell, and I love to create and listen to music, as well as work with technology. My academic goal at Jackson Preparatory & Early College is to graduate high school with enough college credit to have a head start at university. My career goal is to pursue a leadership role in the field of technology.
+          </p>
         </div>
     </div>
-    
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div class="container-fluid main text-center col-sm-3">
+        <img src="img/profile.jpg" class="img-fluid" alt="Profile Pic">
+    </div>
+  </div>
+
+  <div class="bgimg-2">
+    <div class="caption">
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PORTFOLIO</span>
+    </div>
+  </div>
+
+  <div style="position:relative;">
+    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+      <p>Deserunt cillum pariatur anim sit ut eiusmod. Voluptate laborum id incididunt veniam adipisicing nostrud pariatur labore eu duis et. Ut et excepteur duis sit labore proident nostrud aute. Irure officia sunt tempor exercitation pariatur esse. Cillum aliqua elit enim sunt tempor est cillum id ut dolore officia do commodo.</p>
+    </div>
+  </div>
+
+  <div class="bgimg-3">
+    <div class="caption">
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">RESUME</span>
+    </div>
+  </div>
+
+  <div style="position:relative;">
+    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;" class="text-center">
+      <p>Copyright 2018 Tristen Angell </p>
+    </div>
+  </div>
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
