Mostly fixed mobile responsiveness, added blur

--- a/index.html
+++ b/index.html
@@ -16,47 +16,41 @@
 
 <body>
   <div class="bgimg-1">
-    <div class="caption">
+    <div class="caption" id='top'>
       <span class="border">TRISTEN DRAKE ANGELL</span>
     </div>
   </div>
   
-  <div class="row">
-    <div class="container-fluid padded main text-center col-sm-9">
-        <div class="align-middle">
-          <h3 class="primary-text">About Me</h3>
-          <p>
-          My name is Tristen Angell, and I love to create and listen to music, as well as work with technology. My academic goal at Jackson Preparatory & Early College is to graduate high school with enough college credit to have a head start at university. My career goal is to pursue a leadership role in the field of technology.
-          </p>
-        </div>
-    </div>
-    <div class="container-fluid main text-center col-sm-3">
-        <img src="img/profile.jpg" class="img-fluid" alt="Profile Pic">
+  <div class="container-fluid padded text-box text-center col-sm-9">
+    <div class="align-middle">
+      <h3 class="primary-text">About Me</h3>
+      <p>
+        My name is Tristen Angell, and I love to create and listen to music, as well as work with technology. My academic goal at
+        Jackson Preparatory & Early College is to graduate high school with enough college credit to have a head start at university.
+        My career goal is to pursue a leadership role in the field of technology.
+      </p>
     </div>
   </div>
 
   <div class="bgimg-2">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PORTFOLIO</span>
-    </div>
-  </div>
-
-  <div style="position:relative;">
-    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-      <p>Deserunt cillum pariatur anim sit ut eiusmod. Voluptate laborum id incididunt veniam adipisicing nostrud pariatur labore eu duis et. Ut et excepteur duis sit labore proident nostrud aute. Irure officia sunt tempor exercitation pariatur esse. Cillum aliqua elit enim sunt tempor est cillum id ut dolore officia do commodo.</p>
+      <div class="blur">
+        <a href='#'><span class="border">PORTFOLIO</span></a>
+      </div>
+      
     </div>
   </div>
 
   <div class="bgimg-3">
     <div class="caption">
-      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">RESUME</span>
+      <div class="blur">
+        <a href='#'><span class="border">R&#201;SUM&#201;</span></a>
+      </div>
     </div>
   </div>
 
-  <div style="position:relative;">
-    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;" class="text-center">
-      <p>Copyright 2018 Tristen Angell </p>
-    </div>
+  <div class="container-fluid padded footer text-center">
+    <p>Copyright 2018 Tristen Angell. Images courtesy of <a href="https://unsplash.com">Unsplash.</a></p>
   </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
