sorta fixed the title resizing issue, still working on it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="bgimg-1">
-    <div class="caption" id='top'>
+    <div class="caption text-nowrap" id='top'>
       <span class="border">TRISTEN DRAKE ANGELL</span>
     </div>
   </div>
@@ -34,18 +34,13 @@
 
   <div class="bgimg-2">
     <div class="caption">
-      <div class="blur">
-        <a href='#'><span class="border">PORTFOLIO</span></a>
-      </div>
-      
+      <a href='#'><span class="border">PORTFOLIO</span></a>
     </div>
   </div>
 
   <div class="bgimg-3">
     <div class="caption">
-      <div class="blur">
-        <a href='#'><span class="border">R&#201;SUM&#201;</span></a>
-      </div>
+      <a href='#'><span class="border">R&#201;SUM&#201;</span></a>
     </div>
   </div>
 
