added copyright symbol, css tweaks

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="container-fluid padded footer text-center">
-    <p>Copyright 2018 Tristen Angell. Images courtesy of <a href="https://unsplash.com">Unsplash.</a></p>
+    <p>Copyright &#169; 2018 Tristen Angell. Images courtesy of <a href="https://unsplash.com">Unsplash.</a></p>
   </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
