added portfolio and resume pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="bgimg-1">
+  <div class="bg bgimg-1">
     <div class="caption text-nowrap" id='top'>
       <span class="border">TRISTEN DRAKE ANGELL</span>
     </div>
@@ -25,22 +25,21 @@
     <div class="align-middle">
       <h3 class="primary-text">About Me</h3>
       <p>
-        My name is Tristen Angell, and I love to create and listen to music, as well as work with technology. My academic goal at
-        Jackson Preparatory & Early College is to graduate high school with enough college credit to have a head start at university.
-        My career goal is to pursue a leadership role in the field of technology.
-      </p>
+        My name is Tristen Angell. I'm a student, a musician, a designer, and a developer. I was born in Michigan, but my family moved around
+        a lot, so I find it difficult to call any single place home. I find that I'm at my best when I'm working on a project, whether it's writing a program, creating a website, or learning
+        to play a new song. While the future isn't always crystal clear, I currently plan on majoring in Computer Science and pursuing a career in the technology industry.
     </div>
   </div>
 
-  <div class="bgimg-2">
+  <div class="bg bgimg-2">
     <div class="caption">
-      <a href='#'><span class="border">PORTFOLIO</span></a>
+      <a href='portfolio.html'><span class="border">PORTFOLIO</span></a>
     </div>
   </div>
 
-  <div class="bgimg-3">
+  <div class="bg bgimg-3">
     <div class="caption">
-      <a href='#'><span class="border">R&#201;SUM&#201;</span></a>
+      <a href='resume.html'><span class="border">R&#201;SUM&#201;</span></a>
     </div>
   </div>
 
