hopefully sanitized urls

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
   <div class="bg bgimg-2">
     <div class="caption">
-      <a href='portfolio.html'><span class="border">PORTFOLIO</span></a>
+      <a href='portfolio'><span class="border">PORTFOLIO</span></a>
     </div>
   </div>
 
   <div class="bg bgimg-3">
     <div class="caption">
-      <a href='resume.html'><span class="border">R&#201;SUM&#201;</span></a>
+      <a href='resume'><span class="border">R&#201;SUM&#201;</span></a>
     </div>
   </div>
 
