--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand">
-        <a class="navbar-brand" href="index.html">TRISTEN ANGELL</a>
+        <a class="navbar-brand" href="index">TRISTEN ANGELL</a>
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">R&#201;SUM&#201;</a>
         </div>
