--- a/portfolio.html
+++ b/portfolio.html
@@ -15,20 +15,20 @@
 </head>
 
 <body>
-  <div class="bg bgimg-4">
-    <div class="caption text-nowrap">
-      <span class="border">PORTFOLIO</span>
+    <nav class="navbar navbar-dark navbar-expand">
+        <a class="navbar-brand" href="index">HOME</a>
+    </nav>
+
+    <div class="container-fluid padded text-box text-center col-sm-9">
+        <div class="align-middle">
+            <h3 class="primary-text">Logos</h3>
+            <p>
+              Over the past year, I've done several logo commissions, as well as a few for myself. I've highlighted a few of my better ones below. 
+              I follow Material Design principles in a lot of my work, and that's reflected in the logos I create. I used Inkscape for all of these, 
+              but I am currently transitioning to Adobe Illustrator.
+            </p>
+        </div>
     </div>
-  </div>
-  
-  <div class="container-fluid padded text-box text-center col-sm-9">
-    <div class="align-middle">
-      <h3 class="primary-text">Graphic Design</h3>
-      <p>
-        Over the past year, I've done several logo commissions, as well as a few for myself. I've highlighted a few of my better ones below. 
-        I follow Material Design principles in a lot of my work, and that's reflected in the logos I create.
-    </div>
-  </div>
 
 <div class="bg bgimg-5">
     <div class="container center-block col-md-4">
@@ -86,9 +86,11 @@
 
   <div class="container-fluid padded text-box text-center col-sm-9">
     <div class="align-middle">
-      <h3 class="primary-text">TITLE</h3>
+      <h3 class="primary-text">Band Poster</h3>
       <p>
-        something fancy I did that I want to share
+        One of my assignments for a class last semester was to design a poster in Adobe Photoshop. I ended up making two, but I'm particularly
+        fond of this one. I wanted to showcase one of my favorite lyrics from the song "Be Born" by Tally Hall. I used stock images from Unsplash, and
+        some basic text wrapping. I believe that less is more when it comes to design, and I think this serves as a prime example of that design philosophy.
     </div>
   </div>
 
@@ -96,7 +98,7 @@
   </div>
 
   <div class="container-fluid padded footer text-center">
-    <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a></p>
+    <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
   </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
