--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Tristen Angell - Portfolio</title>
+  <title>Tristen Angell - Resume</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,10 +16,7 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand">
-        <a class="navbar-brand" href="index">TRISTEN ANGELL</a>
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">R&#201;SUM&#201;</a>
-        </div>
+        <a class="navbar-brand" href="index">HOME</a>
     </nav>
   
   <div class="container-fluid padded text-box text-left col-sm-9">
@@ -34,7 +31,8 @@
                 <li>Good at self-managing time and resources</li>
                 <li>Experienced in working as a member of a team</li>
                 <li>Can operate POS terminal</li>
-                <li>Good at providing exemplary customer service</li>
+                <li>Competent with Windows, macOS, and Linux</li>
+                <li>Knowledgeable in Microsoft Office and Adobe Photoshop</li>
             </ul>
             
             <h4>EXPERIENCE</h4>
@@ -61,9 +59,9 @@
     </div>
   </div>
 
-  <div class="container-fluid padded footer text-center">
-    <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a></p>
-  </div>
+    <div class="container-fluid padded footer text-center">
+        <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
+    </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
