ease enter the commit message for your changes. Lines starting

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,6 @@
           </div>
       </div> -->
 </div>
-
   <div class="container-fluid padded text-box text-center col-sm-9">
     <div class="align-middle">
       <h3 class="primary-text">Band Poster</h3>
@@ -95,6 +94,9 @@
   </div>
 
   <div class="bg bgimg-6">
+    <div class="container center-block col-md-6">
+        <img style="max-height: 100vh;" class="img-fluid mx-auto d-block" src="img/band_poster.png">
+    </div>
   </div>
 
   <div class="container-fluid padded footer text-center">
