added profile photo, updated footers, fixed responsiveness of header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="container-fluid padded footer text-center">
-    <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
+    <p>Copyright &#169; 2018 Tristen Angell. Profile photo by Sophie Albee-Scott. Background images courtesy of <a href="https://unsplash.com">Unsplash.<br></a>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
   </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
