--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
   </div>
 
     <div class="container-fluid padded footer text-center">
-        <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
+        <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
     </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
