--- a/resume.html
+++ b/resume.html
@@ -30,9 +30,10 @@
                 <li>Effective at communicating clearly, politely, and professionally</li>
                 <li>Good at self-managing time and resources</li>
                 <li>Experienced in working as a member of a team</li>
-                <li>Can operate POS terminal</li>
+                <li>Can code in C++, C#, JS, Java, Lua, Python, Bash, and PHP</li>
                 <li>Competent with Windows, macOS, and Linux</li>
                 <li>Knowledgeable in Microsoft Office and Adobe Photoshop</li>
+                <li>Proficient with modern web design, including responsive design principles and mobile optimization</li>
             </ul>
             
             <h4>EXPERIENCE</h4>
