--- a/resume.html
+++ b/resume.html
@@ -38,8 +38,8 @@
             
             <h4>EXPERIENCE</h4>
             <ul>
-                <li><p><span class="font-weight-bold">Plato’s Closet</span> - Jackson, MI - Sales Associate<br/>April 2018 - Present</p></li>
-                <li><p><span class="font-weight-bold">Younkers</span> - Jackson, MI - Sales Associate<br/>November 2017 - Present</p></li>
+                <li><p><span class="font-weight-bold">KidzArt LLC</span> - Jackson, MI - IT Manager<br/>May 2018 - Present</p></li>
+                <li><p><span class="font-weight-bold">Younkers</span> - Jackson, MI - Sales Associate<br/>November 2017 - June 2018</p></li>
                 <li><p><span class="font-weight-bold">Kroger</span> - Jackson, MI - Courtesy Clerk<br/>October 2017 - December 2017</p></li>
             </ul>
             
