updated about me

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     <div class="align-middle">
       <h3 class="primary-text">About Me</h3>
       <p>
-        My name is Tristen Angell. I'm a student, a musician, a designer, and a developer. I was born in Michigan, but my family moved around
-        a lot, so I find it difficult to call any single place home. I find that I'm at my best when I'm working on a project, whether it's writing a program, creating a website, or learning
-        to play a new song. While the future isn't always crystal clear, I currently plan on majoring in Computer Science and pursuing a career in the technology industry.
+        My name is Tristen Angell. I'm a student, a musician, a designer, and a developer. I find that I'm at my best when I'm working on a project, whether it's writing a program, creating a website, or learning
+        to play a new song. I'm currently pursuing a degree in computer science to advance my career in the technology industry.
     </div>
   </div>
 
