--- a/resume.html
+++ b/resume.html
@@ -24,36 +24,28 @@
   <div class="container-fluid">
     <h1 class="primary-text ">Tristen Angell</h1>
     <span style="font-size:25px;">
-      <a href="mailto:contact@tristenangell.me">contact@tristenangell.me</a>
+      <a href="mailto:jobs@tristenangell.me">jobs@tristenangell.me</a>
     </span>
     <hr/>
     <h4>SKILLS</h4>
     <ul>
-      <li>Effective at communicating clearly, politely, and professionally</li>
-      <li>Good at self-managing time and resources</li>
-      <li>Experienced in working as a member of a team</li>
-      <li>Can code in C++, C#, JS, Java, Lua, Python, Bash, and PHP</li>
+      <li>Comfortable with C++, C#, JS, Java, Lua, Python, and PHP</li>
       <li>Competent with Windows, macOS, and Linux</li>
-      <li>Knowledgeable in Microsoft Office and Adobe Photoshop</li>
       <li>Proficient with modern web design, including responsive design principles and mobile optimization</li>
+      <li>Experienced in adapting to a changing workflow while meeting demands</li>
     </ul>
 
     <h4>EXPERIENCE</h4>
     <ul>
       <li>
         <p>
-          <span class="font-weight-bold">KidzArt LLC</span> - Jackson, MI - IT Manager
+          <span class="font-weight-bold">KidzArt LLC</span> - Jackson, MI - Information Technology Manager
           <br/>May 2018 - Present</p>
       </li>
       <li>
         <p>
           <span class="font-weight-bold">Younkers</span> - Jackson, MI - Sales Associate
           <br/>November 2017 - June 2018</p>
-      </li>
-      <li>
-        <p>
-          <span class="font-weight-bold">Kroger</span> - Jackson, MI - Courtesy Clerk
-          <br/>October 2017 - December 2017</p>
       </li>
     </ul>
 
@@ -64,27 +56,12 @@
           <span class="font-weight-bold">Jackson College</span> - Jackson, MI
           <br/>September 2017 - Present</p>
       </li>
-      <li>
-        <p>
-          <span class="font-weight-bold">Jackson Preparatory and Early College</span> - Jackson, MI
-          <br/>January 2018 - Present</p>
-      </li>
-      <li>
-        <p>
-          <span class="font-weight-bold">daVinci Institute High School</span> - Jackson, MI
-          <br/>August 2017 - December 2017</p>
-      </li>
-      <li>
-        <p>
-          <span class="font-weight-bold">River Ridge High School</span> - Hanover, IL
-          <br/>September 2015 - May 2017</p>
-      </li>
     </ul>
     </div>
   </div>
 
     <div class="container-fluid padded footer text-center">
-        <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
+        <p>Copyright &#169; 2018 Tristen Angell. Background images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
     </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
