--- a/resume.html
+++ b/resume.html
@@ -40,13 +40,13 @@
     <ul>
       <li>
         <p>
-          <span class="font-weight-bold">KidzArt LLC</span> - Jackson, MI - Information Technology Manager
-          <br/>May 2018 - Present</p>
+          <span class="font-weight-bold">Sans Halo LLC</span> - Jackson, MI - Owner/Developer
+          <br/>January 2019 - Present</p>
       </li>
       <li>
         <p>
-          <span class="font-weight-bold">Younkers</span> - Jackson, MI - Sales Associate
-          <br/>November 2017 - June 2018</p>
+          <span class="font-weight-bold">KidzArt LLC</span> - Jackson, MI - Information Technology Manager
+          <br/>May 2018 - October 2018</p>
       </li>
     </ul>
 
