--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="align-middle">
       <h3 class="primary-text">About Me</h3>
       <p>
-        My name is Tristen Angell. I'm a student, a musician, a designer, and a developer. I find that I'm at my best when I'm working on a project, whether it's writing a program, creating a website, or learning
-        to play a new song. I'm currently pursuing a degree in computer science to advance my career in the technology industry.
+        My name is Tristen Angell. I'm a developer, auto enthusiast, and entrapeneur. I founded Sans Halo LLC in order to develop professional
+        websites for local businesses and organizations. I'm currently studying computer science at Jackson College.
     </div>
   </div>
 
