--- a/portfolio.html
+++ b/portfolio.html
@@ -20,85 +20,9 @@
         <a class="navbar-brand" href="index">HOME</a>
     </nav>
 
-    <div class="container-fluid padded text-box text-center col-sm-9">
-        <div class="align-middle">
-            <h3 class="primary-text">Logos</h3>
-            <p>
-              Over the past year, I've done several logo commissions, as well as a few for myself. I've highlighted a few of my better ones below. 
-              I follow Material Design principles in a lot of my work, and that's reflected in the logos I create. I used Inkscape for all of these, 
-              but I am currently transitioning to Adobe Illustrator.
-            </p>
-        </div>
-    </div>
+  <div class="container-fluid padded text-center col-sm-9">
+    <h3>I'm currently working on several projects, check back soon to see what I've been working on</h3>
 
-<div class="bg bgimg-5">
-    <div class="container center-block col-md-4">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="img-fluid logo" src="img/logo1.png" alt="Logo">
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid logo" src="img/logo2.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid logo" src="img/logo3.png" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid logo" src="img/logo4.png" alt="Third slide">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    </div>
-    <!--
-      <div class="container">
-          <div class="row">
-                <div class="col-sm-6">
-                    <img class="img-fluid logo" src="img/logo1.png" alt="Logo">
-                </div>
-                <div class="col-sm-6">
-                    <img class="img-fluid logo" src="img/logo2.png" alt="Logo"> 
-                </div>
-          </div>
-          <div class="row">
-                <div class="col-sm-6">
-                    <img class="img-fluid logo" src="img/logo4.png" alt="Logo">
-                </div>
-                <div class="col-sm-6">
-                    <img class="img-fluid logo" src="img/logo3.png" alt="Logo"> 
-                </div>
-          </div>
-      </div> -->
-</div>
-  <div class="container-fluid padded text-box text-center col-sm-9">
-    <div class="align-middle">
-      <h3 class="primary-text">Band Poster</h3>
-      <p>
-        One of my assignments for a class last semester was to design a poster in Adobe Photoshop. I ended up making two, but I'm particularly
-        fond of this one. I wanted to showcase one of my favorite lyrics from the song "Be Born" by Tally Hall. I used stock images from Unsplash, and
-        some basic text wrapping. I believe that less is more when it comes to design, and I think this serves as a prime example of that design philosophy.
-    </div>
-  </div>
-
-  <div class="bg bgimg-6">
-    <div class="container center-block col-md-6">
-        <img style="max-height: 100vh;" class="img-fluid mx-auto d-block" src="img/band_poster.png">
-    </div>
-  </div>
 
   <div class="container-fluid padded footer text-center">
     <p>Copyright &#169; 2018 Tristen Angell. Background Images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
