--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
 
   <div class="container-fluid padded text-center col-sm-9">
     <h3>I'm currently working on several projects, check back soon to see what I've been working on</h3>
+  </div>
 
 
   <div class="container-fluid padded footer text-center">
