--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a class="navbar-brand" href="index">HOME</a>
     </nav>
 
-  <div class="container-fluid padded text-center col-sm-9">
+  <div class="container-fluid my-20 padded text-center col-sm-9">
     <h3>I'm currently working on several projects, check back soon to see what I've been working on</h3>
   </div>
 
