--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="align-middle">
       <h3 class="primary-text">About Me</h3>
       <p>
-        My name is Tristen Angell. I'm a developer, auto enthusiast, and entrapeneur. I founded Sans Halo LLC in order to develop professional
+        My name is Tristen Angell. I'm a developer, auto enthusiast, and entrepreneur. I founded Sans Halo LLC in order to develop professional
         websites for local businesses and organizations. I'm currently studying computer science at Jackson College.
     </div>
   </div>
