--- a/resume.html
+++ b/resume.html
@@ -61,8 +61,8 @@
     </div>
   </div>
 
-    <div class="container-fluid padded footer text-center">
-        <p>Copyright &#169; 2018 Tristen Angell. Background images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
+    <div class="container-fluid footer text-center">
+        <p>Copyright &#169; 2019 Tristen Angell. Background images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
     </div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
