--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
         <a class="navbar-brand" href="index">HOME</a>
     </nav>
   
-  <div class="container-fluid padded text-box text-left col-sm-9">
+<div class="container-fluid padded text-box text-left col-sm-9">
 <div class="align-left">
   <div class="container-fluid">
     <h1 class="primary-text ">Tristen Angell</h1>
@@ -59,6 +59,7 @@
       </li>
     </ul>
     </div>
+  </div>
   </div>
 
     <div class="container-fluid footer text-center">
