--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
   </div>
   </div>
 
-    <div class="container-fluid footer text-center">
+    <div class="container-fluid padded footer text-center col-md-12">
         <p>Copyright &#169; 2019 Tristen Angell. Background images courtesy of <a href="https://unsplash.com">Unsplash.</a><br>Want to get in touch? <a href="mailto:contact@tristenangell.me">Contact me!</a></p>
     </div>
 
